Revision history for Config-MVP-Writer-INI

{{$NEXT}}

  - Don't leave a trailing space on a line where a config value is blank

0.002     2013-03-04T00:45:53Z

  - Document and test the 'spacing' and 'rewrite_package' options
  - Be more lenient in how sections are specified
  - Bug fixes
  - More tests

0.001     2013-03-02T23:00:07Z

  - Initial release